tests/ui/async-await/in-trait/return-type-suggestion.stderr
warning: the feature `async_fn_in_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/return-type-suggestion.rs:4:12
   |
LL | #![feature(async_fn_in_trait)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: default body not allowed on async trait method
  --> $DIR/return-type-suggestion.rs:7:18
   |
LL |     async fn e() {
   |                  ^ remove this body, or move it to an impl instead

error: aborting due to previous error; 1 warning emitted

